# LDHCStr

./: .gitignore  CMakeLists.txt  main.c  makefile  readme.md
include/: str.h
src/: CMakeLists.txt  str.c
